--- a/favorites.html
+++ b/favorites.html
@@ -5,7 +5,15 @@
     <meta name="author" content="Andronov Danilo">
     <title>My Favorites</title>
 </head>
-<body>
-
+<body bgcolor="#FFFDF5" link="#D2691E" vlink="#8B4513">
+<a href="index.html">
+    <img src="img/LogoYum.png" width="20%" alt="YumBase Logo">
+</a>
+<p align="center">
+    <a href="index.html">Головна</a> |
+    <a href="catalog.html">Каталог</a> |
+    <a href="favorites.html">Обране</a> |
+    <a href="about.html">Про нас</a>
+</p>
 </body>
 </html>
