--- a/index.html
+++ b/index.html
@@ -5,7 +5,103 @@
     <meta name="author" content="Andronov Danilo">
     <title>YumBase</title>
 </head>
-<body>
 
+<body bgcolor="#FFFDF5" link="#D2691E" vlink="#8B4513">
+<a href="index.html">
+    <img src="img/LogoYum.png" width="200" alt="YumBase Logo">
+</a>
+<p align="center">
+    <a href="index.html">Головна</a> |
+    <a href="catalog.html">Каталог</a> |
+    <a href="favorites.html">Обране</a> |
+    <a href="about.html">Про нас</a>
+</p>
+
+<hr>
+<h3>Наші категорії:</h3>
+<ul type="square">
+    <li>Сніданки!</li>
+    <li>Обіди</li>
+    <li>Вечері</li>
+</ul>
+
+<h3>Топ страв тижня:</h3>
+<ol type="I">
+    <li>Український борщ</li>
+    <li>Вареники з картоплею</li>
+    <li>Київський торт</li>
+</ol>
+
+<h3>Кулінарні терміни:</h3>
+<dl>
+    <dt><b>Пасерування</b></dt>
+    <dd>Обсмажування овочів на слабкому вогні.</dd>
+    <dt><b>Бланшування</b></dt>
+    <dd>Швидка термічна обробка окропом.</dd>
+</dl>
+<hr>
+
+<table border="1" width="100%" cellpadding="5">
+    <caption>Таблиця страв тижня</caption>
+    <tr bgcolor="#D2691E">
+        <th>Назва</th>
+        <th>Час приготування</th>
+        <th>Складність</th>
+        <th>Посилання</th>
+    </tr>
+    <tr>
+        <td>Український борщ</td>
+        <td>90 хв</td>
+        <td>Середня</td>
+        <td><a href="catalog.html">Переглянути</a></td>
+    </tr>
+    <tr>
+        <td>Деруни</td>
+        <td>40 хв</td>
+        <td>Легка</td>
+        <td><a href="catalog.html">Переглянути</a></td>
+    </tr>
+    <tr>
+        <td>Київський торт</td>
+        <td>120 хв</td>
+        <td>Висока</td>
+        <td><a href="catalog.html">Переглянути</a></td>
+    </tr>
+</table>
+
+<table border="1" width="100%" align="center" cellspacing="0" cellpadding="10">
+    <colgroup>
+        <col bgcolor="#F5F5DC">
+    </colgroup>
+    <tr bgcolor="#8B4513">
+        <th colspan="2"><font color="white">Харчова цінність (на 100г)</font></th>
+    </tr>
+    <tr>
+        <td rowspan="2" align="center"><b>Основа</b></td>
+        <td>Калорійність: 250 ккал</td>
+    </tr>
+    <tr>
+        <td>Білки: 15г</td>
+    </tr>
+</table>
+
+<p id="welcome" align="center">
+    <font face="Verdana" size="5" color="#8B4513">
+        <u><b>Ласкаво просимо</b></u> до нашого кулінарного сайту <i><b>YumBase</b></i>.
+    </font>
+    <br>
+    <font face="Tahoma" size="4" color="#D2691E">
+        Тут ви знайдете <u>найкращі рецепти</u> <strike>фастфуду</strike> <b>домашньої кухні</b>.
+    </font>
+</p>
+<p>
+    <a href="#welcome">Перехід до певного рядка сторінки</a>
+</p>
+<a href="https://github.com/AndronovDanilo/YumBase" target="_blank">
+    <img src="img/GithubFrontEnd.png" width=800 alt="YumBase Logo">
+</a>
+<iframe src="https://klopotenko.com/ukrainskij-borshh-na-svinaychuh-rebrah/"
+        width="800" height="400" style="border:0;" allowfullscreen="" loading="lazy">
+</iframe>
 </body>
 </html>
